MQTT Message Listener and first implementation of simulator added